template.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Secret
  metadata:
    labels:
      app: stats-api-rust
      template: stats-api-rust
    name: stats-api-rust
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes and load balances the application pods
      service.alpha.openshift.io/dependencies: '[{"name": "mysql", "kind": "Service"}]'
    labels:
      app: stats-api-rust
      template: stats-api-rust
    name: stats-api-rust
  spec:
    ports:
    - name: api
      port: 8000
      targetPort: 8000
    selector:
      name: stats-api-rust
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: stats-api-rust
      template: stats-api-rust
    annotations:
      kubernetes.io/tls-acme: "true"
    name: stats-api-rust
  spec:
    host: "stats-api.apps.xuu.pw"
    to:
      kind: Service
      name: stats-api-rust
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      description: Keeps track of changes in the application image
    labels:
      app: stats-api-rust
      template: stats-api-rust
    name: stats-api-rust
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      description: Defines how to build the application
      template.alpha.openshift.io/wait-for-ready: "true"
    labels:
      app: stats-api-rust
      template: stats-api-rust
    name: stats-api-rust
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: stats-api-rust:latest
    source:
      git:
        uri: https://github.com/rluisr/stats-api-rust.git
      type: Git
    strategy:
      dockerStrategy:
        dockerfilePath: ./Dockerfile
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      description: Defines how to deploy the application server
      template.alpha.openshift.io/wait-for-ready: "true"
    labels:
      app: stats-api-rust
      template: stats-api-rust
    name: stats-api-rust
  spec:
    replicas: 1
    selector:
      name: stats-api-rust
    template:
      metadata:
        labels:
          name: stats-api-rust
        name: stats-api-rust
      spec:
        containers:
        - env:
          - name: DB_URL
            value: mysql://root:pass@localhost:3306/stats
          livenessProbe:
            httpGet:
              path: /health_check
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 60
            timeoutSeconds: 3
          name: stats-api-rust
          ports:
          - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health_check
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 60
            timeoutSeconds: 3
          resources:
            limits:
              memory: 512Mi
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - stats-api-rust
        from:
          kind: ImageStreamTag
          name: stats-api-rust:latest
      type: ImageChange
    - type: ConfigChange
kind: List
metadata: {}
